--- a/themes/django20/layouts/_default/baseof.html
+++ b/themes/django20/layouts/_default/baseof.html
@@ -14,6 +14,7 @@
 
   {{ $sass := resources.Get "sass/style.scss" | resources.ExecuteAsTemplate "style.scss" . }}
   {{ $style := $sass | css.Sass | resources.Minify | resources.Fingerprint }}
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ $style.Permalink }}" />
 
   {{ template "_internal/twitter_cards.html" . }}
