--- a/themes/django20/layouts/index.html
+++ b/themes/django20/layouts/index.html
@@ -1,28 +1,83 @@
 {{- define "main" -}}
 
-  <section>
-    <div class="container container-main {{ .Params.cssClassSuffix }}">
-      <article class="{{ .Params.cssClassSuffix }}">
-        {{ .Content }}
-    	</article>
+  <section class="happy-birthday text-center">
+    <h1 class="text-uppercase text-white fw-bold">Happy birthday Django<br>🎂 🥳 ☺️ 🎁 🌈 🚀 💝 🤗 🦄 🎨</h1>
+  </section>
+  <section class="wave">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#00f8a5" fill-opacity="1" d="M0,288L0,192L288,192L288,288L576,288L576,128L864,128L864,64L1152,64L1152,128L1440,128L1440,320L1152,320L1152,320L864,320L864,320L576,320L576,320L288,320L288,320L0,320L0,320Z"></path></svg>
+  </section>
+  <section class="subheaders">
+    <div class="container">
+      <div class="row px-5">
+        <div class="col-lg-6 pb-5 text-center text-lg-start">
+          <img src="/fun.svg" class="svg-image" alt="A white kitten">
+        </div>
+        <div class="col-lg-6 text-center text-lg-start">
+          <p class="mb-2">Here's to your future! And to celebrate your past!</p>
+          <p class="mt-3">Celebrating 20 years of the Django web framework - join or initiate a local birthday event, and check out special online events.</p>
+        </div>
+      </div>
     </div>
   </section>
-
-
+  <section class="main py-5">
+    <div class="container container-main">
+      <div class="row p-5">
+        <div class="col-lg-6 text-center text-lg-start">
+          <h2 id="stay-tuned" class="the-header">Stay tuned!</h2>
+          <p>Django birthday events are being organized. This website is where it happens and where you can keep your self updated. Have a look at the <a href="/#map">events map</a> and the <a href="/#events">events list</a>.</p>
+        </div>
+        
+        <div class="col-lg-6 text-center text-lg-end pt-5 pt-lg-0">
+          <img src="/success.svg" class="svg-image" alt="A white kitten">
+        </div>
+      </div>
+      <div class="row d-flex p-5">
+        <div class="col-lg-6 order-1 order-lg-0 text-center text-lg-start pt-5 pt-lg-0">
+          <img src="/selfie.svg" class="svg-image" alt="A white kitten">
+        </div>
+        <div class="col-lg-6 order-0 order-lg-1 text-center text-lg-start">
+          <h2 id="a-special-call-for-proposals-birthday-celebrations" class="the-header">A special call for proposals! Birthday celebrations!</h2>
+          <p>To mark the event, we are calling for everyone to do a little thing! Meet new people, or gather old familiar friends - down at the pub, in a park, at your school or online. Nothing is too small.</p>
+          <p>Read more about <a href="/add-event/">hosting a birthday</a> 🎂</p>
+        </div>
+      </div>
+      <div class="row p-5">
+        <div class="col-lg-6 text-center text-lg-start">
+          <h2 id="support-django" class="the-header">Support Django</h2>
+          <p>As a birthday gift of sorts, consider whether you or your employer can support the project via donations to our <a href="https://www.djangoproject.com/foundation/">non-profit Django Software Foundation</a> 🫶.</p>
+          <p>For this special event, we set a special goal! Over the next 20 days, we want to see <strong>200 new donors, supporting Django with $20 or more. With at least 20 of those being recurring donations.</strong> Help us making this happen, via our website or via GitHub Sponsors:</p>
+          <ul>
+            <li><a href="https://www.djangoproject.com/fundraising/">Donate on the Django website</a></li>
+            <li><a href="https://github.com/sponsors/django">Donate on GitHub sponsors</a></li>
+          </ul>
+          <p>Once you’ve done it, tag us <a href="https://fosstodon.org/@django">on Mastodon</a> / <a href="https://bsky.app/profile/djangoproject.com">on Bluesky</a> / <a href="https://x.com/djangoproject">on X</a> / <a href="https://www.linkedin.com/company/django-software-foundation/">on LinkedIn</a> so we can say thank you!</p>
+        </div>
+        <div class="col-lg-6 text-center text-lg-end pt-5 pt-lg-0">
+          <img src="/savings.svg" class="svg-image" alt="A white kitten">
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="wave">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="position: relative; top: -30px"><path fill="#00f8a5" fill-opacity="1" d="M0,288L0,192L288,192L288,288L576,288L576,128L864,128L864,64L1152,64L1152,128L1440,128L1440,0L1152,0L1152,0L864,0L864,0L576,0L576,0L288,0L288,0L0,0L0,0Z"></path></svg>
+  </section>
 
   {{ $events := (where (.Site.GetPage "/events").Pages.ByDate "published" "!=" "false") }}
 
   <section class="map" id="events">
     <div class="container">
-       <article><h1>Explore Events Across Our Global Community!</h1></article>
+      <article class="text-center">
+        <h1>Explore Events Across Our Global Community!</h1>
+      </article>
     </div>
     {{ partial "events_map.html" (dict "events" $events "context" .) }}
   </section>
-
+  <section id="top-wave" class="wave">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#44b0ff" fill-opacity="1" d="M0,32L0,32L288,32L288,96L576,96L576,128L864,128L864,128L1152,128L1152,224L1440,224L1440,320L1152,320L1152,320L864,320L864,320L576,320L576,320L288,320L288,320L0,320L0,320Z"></path></svg>
+  </section>
   <section class="events" id="events">
     <div class="container container-events {{ .Params.cssClassSuffix }}">
       <article class="{{ .Params.cssClassSuffix }}">
-
         <table id="events" class="event-table">
           <thead>
             <tr>
@@ -41,9 +96,11 @@
             {{ end }}
           </tbody>
         </table>
-
     	</article>
     </div>
+  </section>
+  <section id="bottom-wave" class="wave">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#44b0ff" fill-opacity="1" d="M0,32L0,32L288,32L288,96L576,96L576,128L864,128L864,128L1152,128L1152,224L1440,224L1440,0L1152,0L1152,0L864,0L864,0L576,0L576,0L288,0L288,0L0,0L0,0Z"></path></svg>
   </section>
 
 {{- end -}}
