--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -7,7 +7,6 @@ $theme-color-primary: #00f8a5;
 $theme-color-secondary: #44b0ff;
 $theme-color-tertiary: #fe7abf;
 
-// @import url('https://fonts.googleapis.com/css2?family=Monoton&family=Orbitron:wght@400..900&display=swap');
 
 html,
 body,
@@ -31,19 +30,20 @@ html {
 
 /* BODY */
 body {
-
   min-height: 100vh;
   position: relative;
   padding: 0px;
   font-family: "Roboto", sans-serif;
-  background-image: url('{{ "images/django-cake.png" | relURL }}');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: top;
   background-attachment: fixed;
   background-color: $base-color-bg;
-}
 
+  &.main {
+    background-image: url('{{ "images/django-cake.png" | relURL }}');
+  }
+}
 
 /* CONTENT FOR ALL PAGES */
 .container {
@@ -66,6 +66,7 @@ body {
     }
 }
 
+/* HEADER WITH LOGO AND NAVIGATION */
 header {
   width: 100%;
   height: 100%;
@@ -231,6 +232,84 @@ $menu-links: {{ len .Site.Menus.main }};
   }
 }
 
+/* LANDING PAGE SECTION */
+.landing-page {
+  width: 100%;
+  background-color: $base-color-bg;
+  display: flex;
+  justify-content: center;
+
+  .row {
+    width: 100%;
+    margin: 2.5rem 3rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+
+    .happy-birthday {
+      width: 45%;
+
+      h1 {
+        color: $base-color-fg;
+        font-size: 3.5rem;
+        margin: 0;
+      }
+    }
+
+    .cake {
+      width: 55%;
+      img {
+        width: 100%;
+      }
+    }
+
+    @media screen and (max-width: 800px) {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      margin: 2rem 1.5rem;
+
+      .happy-birthday {
+        text-align: center;
+        width: 100%;
+        margin-top: 2rem;
+
+        h1 {
+          font-size: 2.8rem;
+        }
+      }
+
+      .cake {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin-top: 2rem;
+
+        img {
+          width: 75%;
+          margin: 0 auto;
+        }
+      }
+    }
+
+    @media screen and (max-width: 550px) {
+      .happy-birthday {
+        h1 {
+          font-size: 2.2rem;
+        }
+      }
+
+      .cake {
+        img {
+          width: 90%;
+        }
+      }
+    }
+  }
+}
+
+/* HERO SECTION */
 .hero {
   color: $base-color-fg;
   margin: 40px 0;
