--- a/themes/django20/layouts/partials/events_map.html
+++ b/themes/django20/layouts/partials/events_map.html
@@ -6,6 +6,7 @@ integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" /
 {{ $events := .events }}
 <div id="map" aria-label="Django 20th Anniversary Event Locations"></div>
 <script>
+    const singleEventData = {{ .sigleEvent | default "null" }};
     const eventsData = {
         "type": "FeatureCollection",
         "features": [
