Include privacy-embed CSS and JS in baseof.html

--- a/themes/django20/layouts/_default/baseof.html
+++ b/themes/django20/layouts/_default/baseof.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="{{ $style.Permalink }}" />
 
   <link href="/css/zoom-vanilla.min.css" rel="stylesheet">
+  <link href="/css/privacy-embed.css" rel="stylesheet">
 
   {{ template "_internal/twitter_cards.html" . }}
   {{ template "_internal/opengraph.html" . }}
@@ -84,6 +85,7 @@
   {{ end }}
 {{ end }}
 
+<script src="/js/privacy-embed.js"></script>
 </body>
 
 </html>
