--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -7,7 +7,8 @@ $theme-color-primary: #00f8a5;
 $theme-color-secondary: #44b0ff;
 $theme-color-tertiary: #fe7abf;
 
-
+// privacy styles
+@import "privacy-embed";
 html,
 body,
 div,
