Fix lint: trailing whitespace and end-of-file newlines

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -460,7 +460,7 @@ section.timeline {
     }
 	  iframe {
 	    width: 100%;
-	    min-height: 300px;;
+	    min-height: 300px;
 	  }
   }
   li:nth-child(even) {
