--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -835,6 +835,11 @@ section.events {
           color: #3b1f54;
         }
 
+        &.workshop {
+          background-color: #FF9800;
+          color: #fafcfb;
+        }
+
         &.other {
           background-color: #222222;
           color: #fafcfb;
