Fix: Added Blue color label and background for 'Workshop' event (#102) (#112)
* Fix: Added orange color label and background for 'Workshop' event (#102)

* Fix: Added blue color label and background for 'Workshop' event (#102) and default brown color as others so that whenever some event added the color will be default brown

* Fix: Added blue color label and background for 'Workshop' event (#102) and default brown color as others so that whenever some event added the color will be default brown

* Fix: Added blue color label and background for 'Workshop' event (#102) and default brown color as others so that whenever some event added the color will be default brown

---------

Co-authored-by: Keha007 <23f2000576@ds.study.iitm.ac.in>

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -819,7 +819,6 @@ section.events {
         padding: 0.4rem;
         border-radius: 2rem;
         text-align: center;
-
         &.conference {
           background-color: #00f8a5;
           color: #005935;
@@ -833,6 +832,11 @@ section.events {
         &.sprint {
           background-color: #b57edc;
           color: #3b1f54;
+        }
+
+        &.workshop {
+          background-color: #2196F3;
+          color: #fafcfb;
         }
 
         &.other {
